--- a/package.json
+++ b/package.json
@@ -6,7 +6,13 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "eslint . --fix",
+    "prepare": "husky install"
+  },
+  "lint-staged": {
+    "(pages|modules)/**/*.{js,ts,tsx}": [
+      "yarn run lint"
+    ]
   },
   "dependencies": {
     "next": "11.1.2",
@@ -15,8 +21,13 @@
   },
   "devDependencies": {
     "@types/react": "17.0.25",
+    "@typescript-eslint/eslint-plugin": "^4.32.0",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.2",
-    "typescript": "4.4.3"
+    "eslint-config-prettier": "^8.3.0",
+    "lint-staged": "^11.1.2",
+    "prettier": "^2.4.1",
+    "typescript": "4.4.3",
+    "husky": "^7.0.0"
   }
 }
