--- a/.eslintrc
+++ b/.eslintrc
@@ -4,7 +4,8 @@
     "next",
     "next/core-web-vitals",
     "plugin:@typescript-eslint/recommended",
-    "prettier"
+    "prettier",
+    "plugin:import/recommended"
   ],
   "rules": {
     "no-console": "warn",
