--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "storybook": "start-storybook -p 6006",
+    "storybook:build": "build-storybook",
     "lint": "eslint . --fix",
     "prepare": "husky install"
   },
@@ -20,14 +22,31 @@
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@storybook/addon-actions": "^6.3.8",
+    "@storybook/addon-essentials": "^6.3.8",
+    "@storybook/addon-links": "^6.3.8",
+    "@storybook/addon-postcss": "^2.0.0",
+    "@storybook/builder-webpack5": "^6.3.8",
+    "@storybook/react": "^6.3.8",
     "@types/react": "17.0.25",
     "@typescript-eslint/eslint-plugin": "^4.32.0",
+    "autoprefixer": "^10.3.6",
+    "babel-plugin-inline-react-svg": "^2.0.1",
+    "babel-plugin-module-resolver": "^4.1.0",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.2",
     "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.24.2",
+    "husky": "^7.0.0",
     "lint-staged": "^11.1.2",
+    "postcss": "^8.3.8",
+    "postcss-flexbugs-fixes": "^5.0.2",
+    "postcss-loader": "^6.1.1",
+    "postcss-preset-env": "^6.7.0",
     "prettier": "^2.4.1",
-    "typescript": "4.4.3",
-    "husky": "^7.0.0"
+    "storybook-addon-next-router": "^3.0.8",
+    "storybook-css-modules-preset": "^1.1.1",
+    "tailwindcss": "^2.2.16",
+    "typescript": "4.4.3"
   }
 }
