--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "storybook": "start-storybook -p 6006",
     "storybook:build": "build-storybook",
     "lint": "eslint . --fix",
+    "test": "jest",
     "prepare": "husky install"
   },
   "lint-staged": {
@@ -28,7 +29,13 @@
     "@storybook/addon-postcss": "^2.0.0",
     "@storybook/builder-webpack5": "^6.3.8",
     "@storybook/react": "^6.3.8",
+    "@testing-library/dom": "^8.7.1",
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^12.1.1",
+    "@testing-library/user-event": "^13.2.1",
+    "@types/jest": "^27.0.2",
     "@types/react": "17.0.25",
+    "@types/react-test-renderer": "^17.0.1",
     "@typescript-eslint/eslint-plugin": "^4.32.0",
     "autoprefixer": "^10.3.6",
     "babel-plugin-inline-react-svg": "^2.0.1",
@@ -38,15 +45,20 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.24.2",
     "husky": "^7.0.0",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^27.2.4",
+    "jest-svg-transformer": "^1.0.0",
     "lint-staged": "^11.1.2",
     "postcss": "^8.3.8",
     "postcss-flexbugs-fixes": "^5.0.2",
     "postcss-loader": "^6.1.1",
     "postcss-preset-env": "^6.7.0",
     "prettier": "^2.4.1",
+    "react-test-renderer": "^17.0.2",
     "storybook-addon-next-router": "^3.0.8",
     "storybook-css-modules-preset": "^1.1.1",
     "tailwindcss": "^2.2.16",
+    "ts-jest": "^27.0.5",
     "typescript": "4.4.3"
   }
 }
