--- a/.babelrc
+++ b/.babelrc
@@ -5,7 +5,8 @@
       "module-resolver",
       {
         "alias": {
-          "@modules": "./modules"
+          "@modules": "./modules",
+          "@shared": "./modules/shared"
         }
       }
     ],
