--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "classnames": "^2.3.1",
     "next": "11.1.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-toastify": "^8.0.3"
   },
   "devDependencies": {
     "@storybook/addon-actions": "^6.3.8",
