--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "storybook:build": "build-storybook",
     "lint": "eslint . --fix",
     "test": "jest",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "chromatic": "chromatic --exit-zero-on-changes"
   },
   "lint-staged": {
     "(pages|modules)/**/*.{js,ts,tsx}": [
@@ -43,6 +44,7 @@
     "autoprefixer": "^10.3.6",
     "babel-plugin-inline-react-svg": "^2.0.1",
     "babel-plugin-module-resolver": "^4.1.0",
+    "chromatic": "^6.7.0",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.2",
     "eslint-config-prettier": "^8.3.0",
@@ -63,5 +65,7 @@
     "tailwindcss": "^2.2.16",
     "ts-jest": "^27.0.5",
     "typescript": "4.4.3"
-  }
+  },
+  "readme": "ERROR: No README data found!",
+  "_id": "yashry-cataloge-front@0.1.0"
 }
