--- a/.github/workflows/deploy-storybook-pr.yaml
+++ b/.github/workflows/deploy-storybook-pr.yaml
@@ -29,8 +29,8 @@ jobs:
         uses: thollander/actions-comment-pull-request@v1
         with:
           message: |
-            See the latest storybook changes for this PR [here](https://${GITHUB_HEAD_REF}--62c1b8bce87ba497a5ffedff.chromatic.com) 🚀🚀 🎉 🎉
+            See the latest storybook changes for this PR [here](https://${{github.base_ref}}--62c1b8bce87ba497a5ffedff.chromatic.com) 🚀🚀 🎉 🎉
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Debug
-        run: echo ${{ env.BRANCH_NAME }}
+        run: echo ${{ github.base_ref }}
