--- a/.github/workflows/chromatic.yml
+++ b/.github/workflows/chromatic.yml
@@ -3,6 +3,8 @@ on:
   push:
     branches:
       - main
+  pull_request:
+    branches: [main]
 
 jobs:
   chromatic-deployment:
@@ -18,8 +20,23 @@ jobs:
           fetch-depth: 0
       - name: Install dependencies
         run: yarn
+
+        # Build and Deploy storybook
       - name: Publish to Chromatic
         uses: chromaui/action@v1
         with:
           projectToken: ${{ secrets.CHROMATIC_PROJECT_TOKEN }}
           exitZeroOnChanges: true
+
+      - name: Comment PR
+        if: ${{ github.head_ref }} != 'main'
+        uses: thollander/actions-comment-pull-request@v1
+        with:
+          message: |
+            ### chromatic
+            ### Storybook deployed successfully 🚀🚀 🎉 🎉
+            See the latest storybook changes for this PR [here](https://${{github.head_ref}}--${{secrets.STORYBOOK_DOMAIN}})
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Debug
+        run: echo ${{ github.head_ref }}
