wait for first job to finish

--- a/.github/workflows/chromatic.yml
+++ b/.github/workflows/chromatic.yml
@@ -30,6 +30,7 @@ jobs:
 
   output-storybook-url:
     if: ${{ github.event_name == 'pull_request' }}
+    needs: chromatic-deployment
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
