--- a/.github/workflows/chromatic.yml
+++ b/.github/workflows/chromatic.yml
@@ -37,12 +37,19 @@ jobs:
         node: ["14.x"]
         os: [ubuntu-latest]
     steps:
-      - name: Get Hash
-        id: hash
-        run: echo "git_hash=$(git rev-parse --short "$GITHUB_SHA")" >> $GITHUB_HASH
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
+      - name: Get last commit hash
+      - uses: nrwl/last-successful-commit-action@v1
+        id: last_successful_commit
+        with:
+          branch: ${{github.head_ref}}
+          workflow_id: "chromatic.yml"
+          github_token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Check Hash
-        run: echo "${{ env.hash }}"
+        run: echo "${{ steps.last_successful_commit.outputs.commit_hash }}"
 
       - name: Comment PR
         uses: thollander/actions-comment-pull-request@v1
@@ -50,5 +57,5 @@ jobs:
           message: |
             ### chromatic
             ### Storybook deployed successfully 🚀🚀 🎉 🎉
-            See the latest storybook changes for this PR [here](https://${{ env.hash }}--${{secrets.STORYBOOK_DOMAIN}})
+            See the latest storybook changes for this PR [here](https://${{ steps.last_successful_commit.outputs.commit_hash }}--${{secrets.STORYBOOK_DOMAIN}})
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
