--- a/.github/workflows/chromatic.yml
+++ b/.github/workflows/chromatic.yml
@@ -41,7 +41,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Get last commit hash
-      - uses: nrwl/last-successful-commit-action@v1
+        uses: nrwl/last-successful-commit-action@v1
         id: last_successful_commit
         with:
           branch: ${{github.head_ref}}
