--- a/.github/workflows/chromatic.yml
+++ b/.github/workflows/chromatic.yml
@@ -37,6 +37,11 @@ jobs:
         node: ["14.x"]
         os: [ubuntu-latest]
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+
       - name: Get commit data action
         uses: rlespinasse/git-commit-data-action@v1
 
