back to rlespinasse custom action and test it with pull request commit

--- a/.github/workflows/chromatic.yml
+++ b/.github/workflows/chromatic.yml
@@ -44,10 +44,10 @@ jobs:
 
       - name: Get commit data action
         id: last_commit
-        uses: pr-mpt/actions-commit-hash@v1
+        uses: rlespinasse/git-commit-data-action@v1
 
       - name: Check last short commit id
-        run: echo "${{ steps.last_commit.outputs.short  }}"
+        run: echo "${{ env.GIT_COMMIT_SHORT_SHA  }}"
 
       - name: Comment PR
         uses: thollander/actions-comment-pull-request@v1
@@ -55,5 +55,5 @@ jobs:
           message: |
             ### chromatic
             ### Storybook deployed successfully 🚀🚀 🎉 🎉
-            See the latest storybook changes for this PR [here](https://${{ steps.last_commit.outputs.short  }}--${{secrets.STORYBOOK_DOMAIN}})
+            See the latest storybook changes for this PR [here](https://${{ env.GIT_COMMIT_SHORT_SHA  }}--${{secrets.STORYBOOK_DOMAIN}})
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
