--- a/.github/workflows/chromatic.yml
+++ b/.github/workflows/chromatic.yml
@@ -29,7 +29,7 @@ jobs:
           exitZeroOnChanges: true
 
   output-storybook-url:
-    if: ${{ github.event_name == 'pull_request' }}
+    if: ${{ github.event_name == 'push' }}
     needs: chromatic-deployment
     runs-on: ${{ matrix.os }}
     strategy:
